2004-08-11  Chad Fowler <chad@chadfowler.com>
       * lib/rubygems/gem_commands.rb: query is now case insensitive (as it used to be)
       * lib/rubygems/installer.rb: gem_make.out wasn't being written when an extension failed to compile.

2004-08-11  Rich Kilmer <rich@infoether.com>

        * removed String.to_requirement...we should not modify 
          base classes in Ruby! modified to get rid of said to_requirement 
          with Gem::Version::Requirement.create(obj)

        * specification.rb - fixed constructor bug of version requirement...
          it now defaults to Requirement.default

2004-08-11  Chad Fowler <chad@chadfowler.com>

        * One more specification.rb bug fixed.

2004-08-11  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/specification.rb:
	  - Added convenience class methods: attribute_names,
	    attribute_defaults, default_value, required_attributes, and
	    required_attribute?.

	  - IMPORTANT: attribute readers now use lazy initialization, just
	    like some of them did before the 2004-08-01 change.  This was done
	    to fix the breakage when loading older gemspecs.

	  - IMPORTANT: replaced instance variable access with attribute reader
	    method calls in many cases.  This is in line with the above change.

	  - Good documentation for the "attribute" method.

	  - Renamed _copy -> _copy_of.

	* lib/rubygems/cache.rb:
	  - Some fairly shallow changes. Exception handling needs improvement.

	* lib/rubygems/version.rb:
	  - (Version.create) new method (for convenience)
	  - (Version::Requirement.create) new method (for convenience)
	  - (Version::Requirement.default) new method (for consistency)

	* test/test_specification.rb: test attribute_names instead of
	  attributes.  Other "class convenience" methods remain to be tested
	  at this stage.  Also added test classes for legacy gemspecs.

	* test/data/legacy/keyedlist-0.4.0.ruby: added.
	* test/data/legacy/keyedlist-0.4.0.yaml: added.
